// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Distribute 2 to each student, overlap 1`] = `
Object {
  "payload": Object {
    "1": Object {
      "data": Object {
        "aa": Object {
          "id": "aa",
        },
        "bb": Object {
          "id": "bb",
        },
      },
    },
    "2": Object {
      "data": Object {
        "aa": Object {
          "id": "aa",
        },
        "bb": Object {
          "id": "bb",
        },
      },
    },
    "3": Object {
      "data": Object {
        "aa": Object {
          "id": "aa",
        },
        "bb": Object {
          "id": "bb",
        },
      },
    },
    "4": Object {
      "data": Object {
        "aa": Object {
          "id": "aa",
        },
        "bb": Object {
          "id": "bb",
        },
      },
    },
    "5": Object {
      "data": Object {
        "aa": Object {
          "id": "aa",
        },
        "bb": Object {
          "id": "bb",
        },
      },
    },
  },
  "structure": "individual",
}
`;

exports[`Distribute 5 to each group,  overlap 1`] = `
Object {
  "payload": Object {
    "1": Object {
      "data": Object {
        "aa": Object {
          "id": "aa",
        },
        "bb": Object {
          "id": "bb",
        },
        "cc": Object {
          "id": "cc",
        },
        "dd": Object {
          "id": "dd",
        },
        "ee": Object {
          "id": "ee",
        },
      },
    },
    "2": Object {
      "data": Object {
        "aa": Object {
          "id": "aa",
        },
        "bb": Object {
          "id": "bb",
        },
        "cc": Object {
          "id": "cc",
        },
        "dd": Object {
          "id": "dd",
        },
        "ee": Object {
          "id": "ee",
        },
      },
    },
  },
  "structure": Object {
    "groupingKey": "group",
  },
}
`;

exports[`Distribute 5 to each group, no overlap 1`] = `
Object {
  "payload": Object {
    "1": Object {
      "data": Object {
        "aa": Object {
          "id": "aa",
        },
        "cc": Object {
          "id": "cc",
        },
        "ee": Object {
          "id": "ee",
        },
        "gg": Object {
          "id": "gg",
        },
      },
    },
    "2": Object {
      "data": Object {
        "bb": Object {
          "id": "bb",
        },
        "dd": Object {
          "id": "dd",
        },
        "ff": Object {
          "id": "ff",
        },
      },
    },
  },
  "structure": Object {
    "groupingKey": "group",
  },
}
`;
